# nrf-modem-test-s-mode

./: Cargo.toml  memory.x
