[package]
edition = "2021"
name = "embassy-nrf9151-secure-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.3.1", features = [
  "defmt",
  "nrf9120-s",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "time",
] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
nrf-modem = { path = "/home/nponsard/git/nrf-modem", features = [
  "nrf9151",
  "defmt",
  "modem-log",
  "modem-trace",
] }

tinyrlibc = "0.5.0"

[profile.release]
debug = 2
